# agent-runtime

./: AGENTS.md  README.md  pyproject.toml  self_test.py
.agent/: CARD.md
sessions/2026-07-18-205914-http-ollama-bicycle-seat/: ollama-model-preflight.json  request.json  response.json  run-meta.json  sha256.json  validator.json
sessions/2026-07-18-210056-http-ollama-bicycle-seat-rerun/: request.json  response.json  run-meta.json  sha256.json  validator.json
src/agent_runtime/: api.py  executor.py  main.py  ollama_adapter.py  planner_rules.py  trace_types.py  types.py
src/agent_runtime/tools/: base.py  http_tool.py  mcp_tool.py  registry.py
src/agent_runtime/tools/examples/: math_tool.py  weather_tool.py  web_search_tool.py
tests/: test_api_ollama.py  test_ollama_adapter.py
